log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Thu 30 Mar 2023 03:29:53 PM UTC: 
 tests:  0|6
total_score: 0/70
31611cc
Thu 30 Mar 2023 03:32:39 PM UTC: 
 arraylist.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:18:3: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   18 |   lista->data=(void**)calloc(lista->capacity,sizeof(void));
      |   ^~~~~
      |   list
arraylist.c:18:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
b288765
Thu 30 Mar 2023 03:32:51 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
30b9cc7
Thu 30 Mar 2023 03:34:48 PM UTC: 
 arraylist.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:24:10: error: invalid type argument of ‘->’ (have ‘int’)
   24 |   l->size->data=data;
      |          ^~
Compilation failed
4a043bc
Thu 30 Mar 2023 03:35:00 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:24:10: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   24 |   l->size=data;
      |          ^
cc1: all warnings being treated as errors
Compilation failed
2a02c25
Thu 30 Mar 2023 03:35:10 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:24:13: error: dereferencing ‘void *’ pointer [-Werror]
   24 |   l->size = *data;
      |             ^~~~~
arraylist.c:24:11: error: void value not ignored as it ought to be
   24 |   l->size = *data;
      |           ^
cc1: all warnings being treated as errors
Compilation failed
c5ac29a
Thu 30 Mar 2023 03:36:25 PM UTC: 
 arraylist.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:27:24: error: ‘ArrayList’ {aka ‘struct ArrayList’} has no member named ‘dara’; did you mean ‘data’?
   27 |     l->data=realloc(l->dara,l->size * sizeof(void*));
      |                        ^~~~
      |                        data
Compilation failed
1155d37
Thu 30 Mar 2023 03:36:32 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
375bc6c
Thu 30 Mar 2023 03:37:15 PM UTC: 
 arraylist.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:30:12: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   30 |     l->size=data;
      |            ^
cc1: all warnings being treated as errors
Compilation failed
d850fa2
Thu 30 Mar 2023 03:37:24 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:30:12: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   30 |     l->size+=data;
      |            ^~
cc1: all warnings being treated as errors
Compilation failed
1c7ba81
Thu 30 Mar 2023 03:37:37 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:30:12: error: comparison between pointer and integer [-Werror]
   30 |     l->size==data;
      |            ^~
arraylist.c:30:12: error: statement with no effect [-Werror=unused-value]
   30 |     l->size==data;
      |     ~~~~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
99ecf35
Thu 30 Mar 2023 03:38:53 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:30:5: error: statement with no effect [-Werror=unused-value]
   30 |     l
      |     ^
arraylist.c:30:6: error: expected ‘;’ before ‘}’ token
   30 |     l
      |      ^
      |      ;
   31 |   }
      |   ~   
cc1: all warnings being treated as errors
Compilation failed
e8358fd
Thu 30 Mar 2023 03:39:05 PM UTC: 
 arraylist.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
0af8bc6
Thu 30 Mar 2023 03:39:32 PM UTC: 
 arraylist.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  1|5
total_score: 10/70
57c6127
Thu 30 Mar 2023 03:39:46 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
84e4988
Thu 30 Mar 2023 03:41:14 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
52c7a95
Thu 30 Mar 2023 03:41:46 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
f1f1fda
Thu 30 Mar 2023 03:42:24 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
a891a12
Thu 30 Mar 2023 03:42:44 PM UTC: 
 arraylist.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
a9bbf80
Thu 30 Mar 2023 03:44:25 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c47a222
Thu 30 Mar 2023 03:46:33 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
490df30
Thu 30 Mar 2023 03:46:55 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
a885e9c
Thu 30 Mar 2023 03:47:12 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
b426033
Thu 30 Mar 2023 03:49:37 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
25025bd
Thu 30 Mar 2023 03:49:50 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
0e629b9
Thu 30 Mar 2023 03:49:59 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a6a3b3f
Thu 30 Mar 2023 03:50:34 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
4b063cc
Thu 30 Mar 2023 03:50:43 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
5dc8917
Thu 30 Mar 2023 03:50:54 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
72c8afa
Thu 30 Mar 2023 03:51:10 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
47335b2
Thu 30 Mar 2023 03:51:20 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
cb81e32
Thu 30 Mar 2023 03:51:33 PM UTC: 
 arraylist.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
c3301cc
Thu 30 Mar 2023 03:51:43 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
b1926a0
Thu 30 Mar 2023 03:51:53 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:32:13: error: invalid type argument of unary ‘*’ (have ‘int’)
   32 |     l->size**2;
      |             ^~
Compilation failed
5c60872
Thu 30 Mar 2023 03:52:51 PM UTC: 
 arraylist.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
/nix/store/v8imx1nvyz0hgvx9cbcmh6gp4ngw3ffj-binutils-2.35.1/bin/ld: /tmp/ccWbCczh.o: in function `append':
test.c:(.text+0x94): undefined reference to `pow'
collect2: error: ld returned 1 exit status
Compilation failed
c74c46d
Thu 30 Mar 2023 03:53:11 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c:5:10: fatal error: cmath: No such file or directory
    5 | #include <cmath>
      |          ^~~~~~~
compilation terminated.
Compilation failed
81e4290
Thu 30 Mar 2023 03:53:34 PM UTC: 
 arraylist.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
0af53c5
Thu 30 Mar 2023 03:53:50 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
1ca3fd4
Thu 30 Mar 2023 03:54:11 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:29:20: error: ‘ArrayList’ {aka ‘struct ArrayList’} has no member named ‘capacidad’; did you mean ‘capacity’?
   29 |     l->capacity=l->capacidad*2;
      |                    ^~~~~~~~~
      |                    capacity
Compilation failed
ddfcc89
